# stadiamaps-api-py

./: .gitignore  .openapi-generator-ignore  CHANGELOG.md  DEVELOPING.md  README.md  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: Access.md  AddendumV2.md  AddressComponentsV2.md  AdminRegion.md  Administrative.md  AnnotationFilters.md  AutoCostingOptions.md  AutoCostingOptionsAllOf.md  BaseCostingOptions.md  BaseTraceRequest.md  BicycleCostingOptions.md  BicycleCostingOptionsAllOf.md  BikeNetwork.md  BulkRequest.md  BulkRequestQuery.md  BulkSearchRequestInner.md  BulkSearchResponse.md  Context.md  Contour.md  Coordinate.md  CostingModel.md  CostingOptions.md  DirectionsOptions.md  DistanceUnit.md  EdgeSign.md  EdgeUse.md  EndNode.md  ExtendedDirectionsOptions.md  FeaturePropertiesV2.md  FeaturePropertiesV2Properties.md  FoursquareAddendum.md  GeoAttributes.md  GeoJSONGeometry.md  GeoJSONGeometryBase.md  GeoJSONLineString.md  GeoJSONLineStringAllOf.md  GeoJSONPoint.md  GeoJSONPointAllOf.md  GeoJSONPolygon.md  GeoJSONPolygonAllOf.md  (+141 more)
stadiamaps/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
test/: test_access.py  test_addendum_v2.py  test_address_components_v2.py  test_admin_region.py  test_administrative.py  test_annotation_filters.py  test_auto_costing_options.py  test_auto_costing_options_all_of.py  test_base_costing_options.py  test_base_trace_request.py  test_bicycle_costing_options.py  test_bicycle_costing_options_all_of.py  test_bike_network.py  test_bulk_request.py  test_bulk_request_query.py  (+167 more)
(+612 files in other folders)
